fix: scrollbar color

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 * {
     box-sizing: border-box;
     color: var(--color-foreground);
+    scrollbar-color: var(--color-neutral) transparent;
 }
 
 body {
